<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView app:cardUseCompatPadding="true"
    app:cardElevation="8dp"
    app:cardCornerRadius="12dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/poster_image"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/poster"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/poster_image"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/year_text"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            app:layout_constraintStart_toEndOf="@id/poster_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/year"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/genre_text"
            app:layout_constraintStart_toEndOf="@id/poster_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/year_text"
            android:text="@string/genre"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/rating_img"
            android:layout_width="wrap_content"
            android:contentDescription="@string/rating"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_baseline_star_rate_24"
            app:layout_constraintBottom_toBottomOf="@+id/rating_text"
            app:layout_constraintStart_toEndOf="@id/poster_image"
            app:layout_constraintTop_toTopOf="@+id/rating_text"
            app:tint="@color/yellow" />

        <TextView
            android:id="@+id/rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/rating"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/rating_img"
            app:layout_constraintTop_toBottomOf="@id/genre_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>