<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/banner_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/poster"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="3"
            android:text="@string/title"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/banner_image" />

        <TextView
            android:id="@+id/year_text"
            android:layout_width="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/year"
            app:layout_constraintTop_toBottomOf="@id/title_text" />

        <TextView
            android:id="@+id/genre_text"
            android:layout_width="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/genre"
            app:layout_constraintTop_toBottomOf="@id/year_text" />

        <ImageView
            android:id="@+id/rating_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/rating"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_baseline_star_rate_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rating_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre_text"
            app:tint="@color/yellow" />

        <TextView
            android:id="@+id/rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            app:layout_constraintBottom_toBottomOf="@+id/rating_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rating_img"
            app:layout_constraintTop_toTopOf="@+id/rating_img" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>